add mongodb & scrapy mongodb connection 2023.1.6

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,46 @@ services:
       - crawlers
     env_file:
       - .env
+  
+  redisinsight:
+    image: redislabs/redisinsight:latest
+    container_name: redis-insight
+    ports:
+      - '8001:8001'
+    volumes:
+      - ./redisinsight-data:/db
+    networks:
+      - crawlers
 
+  mongo:
+    image: mongo:4.2
+    container_name: crawlers-mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+    ports:
+      - 27017:27017
+    volumes:
+      - mongo-data:/data/db
+    networks:
+      - crawlers
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      ME_CONFIG_MONGODB_URL: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/
+    networks:
+      - crawlers
 
 volumes:
   redis-data:
+  mongo-data:
 
 networks:
   crawlers:
