--- a/crawler/scrapy.cfg
+++ b/crawler/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = steamCrawler.settings
+default = SteamCrawler.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = steamCrawler
+project = SteamCrawler
