--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
 
   mongo-express:
     image: mongo-express
+    container_name: crawlers-mongo-express
     restart: always
     ports:
       - 8081:8081
@@ -51,6 +52,8 @@ services:
       ME_CONFIG_MONGODB_URL: mongodb://${MONGO_INITDB_ROOT_USERNAME}:${MONGO_INITDB_ROOT_PASSWORD}@mongo:27017/
     networks:
       - crawlers
+
+  
 
 volumes:
   redis-data:
