--- a/crawler/requirements.txt
+++ b/crawler/requirements.txt
@@ -1,7 +1,6 @@
-async-timeout==4.0.2
 attrs==22.2.0
 Automat==22.10.0
-certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
+certifi 
 cffi==1.15.1
 charset-normalizer==2.1.1
 constantly==15.1.0
@@ -16,7 +15,8 @@ itemadapter==0.7.0
 itemloaders==1.0.6
 jmespath==1.0.1
 lxml==4.9.2
-packaging==22.0
+mongo==0.2.0
+packaging==23.0
 parsel==1.7.0
 Protego==0.2.1
 pyasn1==0.4.8
@@ -26,17 +26,16 @@ PyDispatcher==2.0.6
 pymongo==4.3.3
 pyOpenSSL==23.0.0
 queuelib==1.6.2
-redis==4.4.0
 requests==2.28.1
 requests-file==1.5.1
-Scrapy==2.7.1
+# Scrapy==2.7.1
 service-identity==21.1.0
 six==1.16.0
 tldextract==3.4.0
-Twisted==22.10.0
-twisted-iocpsupport==1.0.2
+# Twisted==22.10.0
+# twisted-iocpsupport
 typing_extensions==4.4.0
-urllib3==1.26.13
+urllib3==1.26.14
 w3lib==2.1.1
 wincertstore==0.2
 zope.interface==5.5.2
